--- a/src/main/resources/templates/admin/user/users.html
+++ b/src/main/resources/templates/admin/user/users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head th:replace="~{admin/fragments :: page_head}"></head>
 <body>
 <div class="container-fluid">
@@ -48,8 +48,11 @@
                 <li>
                     <span class="fas fa-user fa-2x icon-silver"></span>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" sec:authentication="principal.fullName"></a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" sec:authentication="principal.fullName"></a>
+                    <div class="dropdown-menu">
+                        <a href="" class="dropdown-item">Logout</a>
+                    </div>
                 </li>
             </ul>
         </div>
