--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+<html lang="en" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head th:replace="~{admin/fragments :: page_head}"></head>
 <body>
 
 <div class="container-fluid">
+    <form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+        <input type="submit">
+    </form>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <a href="" class="navbar-brand" th:href="@{/shopme/admin/home}">
             <img th:src="@{/images/ShopmeAdminSmall.png}" alt="Image error">
@@ -50,9 +54,10 @@
                     <span class="fas fa-user fa-2x icon-silver"></span>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" sec:authentication="principal.fullName"></a>
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown"
+                       sec:authentication="principal.fullName"></a>
                     <div class="dropdown-menu">
-                        <a href="" class="dropdown-item">Logout</a>
+                        <a href="" class="dropdown-item" id="logoutLink">Logout</a>
                     </div>
                 </li>
             </ul>
@@ -66,4 +71,12 @@
 
 <div th:replace="~{admin/fragments :: page_footer}"></div>
 </body>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#logoutLink').on('click', function (e) {
+            e.preventDefault();
+            document.logoutForm.submit();
+        })
+    });
+</script>
 </html>
