--- a/src/main/resources/templates/admin/user/login.html
+++ b/src/main/resources/templates/admin/user/login.html
@@ -19,6 +19,10 @@
             <div th:if="${param.error}">
                 <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
             </div>
+
+            <div class="text-center" th:if="${param.logout}">
+                <p class="text-warning">You have been logout.</p>
+            </div>
             <p>Access to Shopme Control Panel</p>
             <p>
                 <input type="email" name="email" class="form-control" placeholder="E-mail" required/>
