--- a/src/main/resources/templates/admin/fragments.html
+++ b/src/main/resources/templates/admin/fragments.html
@@ -59,6 +59,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+            integrity="sha384-4s+ctq3Db3b9VxKUbB29U8HKgytdW5MhlM72WJjAfsqsqpoNz7Xn5bWfMIc07DQ"
+            crossorigin="anonymous"></script>
     <link type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
@@ -111,19 +114,6 @@
     ></a>
 </div>
 
-
-<div th:fragment="category_action">
-    <a th:href="@{'/shopme/admin/categories/edit/' + ${category.id}}"
-       class="fas fa-edit fa-2x icon-green"
-       title="Update this category"></a>
-    <th:block th:if="${category.hasChildren == false}">
-        <a href="#" class="fas fa-trash fa-2x icon-dark"
-           title="Delete this category"
-           data-toggle="modal"
-           data-target="#deleteModal"
-           th:attr="data-category-id=${category.id}"></a>
-    </th:block>
-</div>
 
 
 </body>
