--- a/src/main/resources/templates/admin/category/categories.html
+++ b/src/main/resources/templates/admin/category/categories.html
@@ -9,7 +9,11 @@
     }
 </style>
 <body>
-<div th:replace="~{admin/navigation :: menu}"></div>
+<div class="container-fluid">
+    <div th:replace="~{admin/navigation :: lougout_form}"></div>
+
+    <nav th:replace="~{admin/navigation :: menu}"></nav>
+</div>
 
 <div>
     <h2>Category manager</h2>
@@ -165,4 +169,5 @@
         });
     })
 </script>
+<script th:src="@{/js/logout.js}"></script>
 </html>
