--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -5,64 +5,9 @@
 <body>
 
 <div class="container-fluid">
-    <form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
-        <input type="submit">
-    </form>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <a href="" class="navbar-brand" th:href="@{/shopme/admin/home}">
-            <img th:src="@{/images/ShopmeAdminSmall.png}" alt="Image error">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="topNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a th:href="@{/shopme/admin/users}" class="nav-link">Users</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/shopme/admin/categories}" class="nav-link">Categories</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/shopme/admin/brands}" class="nav-link">Brands</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/shopme/admin/products}" class="nav-link">Product</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/shopme/admin/customers}" class="nav-link">Customers</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/shopme/admin/shipping}" class="nav-link">Shipping</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/shopme/admin/orders}" class="nav-link">Orders</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/shopme/admin/reports}" class="nav-link">Reports</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/shopme/admin/articles}" class="nav-link">Articles</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/shopme/admin/menus}" class="nav-link">Menus</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/shopme/admin/settings}" class="nav-link">Settings</a>
-                </li>
-                <li>
-                    <span class="fas fa-user fa-2x icon-silver"></span>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown"
-                       sec:authentication="principal.fullName"></a>
-                    <div class="dropdown-menu">
-                        <a href="" class="dropdown-item" id="logoutLink">Logout</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div th:replace="~{admin/navigation :: lougout_form}"></div>
+
+    <nav th:replace="~{admin/navigation :: menu}"></nav>
 </div>
 
 <div class="text-center">
@@ -71,12 +16,5 @@
 
 <div th:replace="~{admin/fragments :: page_footer}"></div>
 </body>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#logoutLink').on('click', function (e) {
-            e.preventDefault();
-            document.logoutForm.submit();
-        })
-    });
-</script>
+<script th:src="@{/js/logout.js}"></script>
 </html>
