--- a/src/main/resources/templates/admin/user/account_form.html
+++ b/src/main/resources/templates/admin/user/account_form.html
@@ -11,19 +11,20 @@
 </div>
 
 <div>
-    <h2 class="text-center">User manager | [[${pageTitle}]]</h2>
-    <button class="btn btn-warning" style="margin-bottom: 1rem;">
-        <a style="color: white;text-decoration: none;" th:href="@{/shopme/admin/users}">Back</a>
-    </button>
-    <form th:action="@{/shopme/admin/users/save}" th:method="post" th:object="${user}" enctype="multipart/form-data"
-          style="max-width: 700px; margin: 0 auto" onsubmit="return checkEmailUnique(this)">
+    <h2 class="text-center">Your account details</h2>
+
+    <div th:replace="~{admin/fragments :: message}"></div>
+
+    <form th:action="@{/shopme/admin/account/update}" th:method="post"
+          th:object="${user}"
+          enctype="multipart/form-data"
+          style="max-width: 700px; margin: 0 auto">
         <input type="hidden" th:field="*{id}" id="userId">
         <div class="border border-secondary rounded p-3">
             <div class="form-group row mb-3">
                 <label class="col-sm-4 col-form-label">E-mail</label>
                 <div class="col-sm-8">
-                    <input type="email" class="form-control" id="email" th:field="*{email}" required minlength="8"
-                           maxlength="128">
+                    <input type="email" class="form-control" id="email" th:field="*{email}" readonly>
                 </div>
             </div>
             <div class="form-group row mb-3">
@@ -40,23 +41,27 @@
                            maxlength="45">
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label class="col-sm-4 col-form-label">Password</label>
                 <div class="col-sm-8">
-                    <input th:if="${user.id == null}" type="password" class="form-control" th:field="*{password}" required minlength="8" maxlength="20">
-                    <input th:if="${user.id != null}" type="password" class="form-control" th:field="*{password}" minlength="8" maxlength="20">
+                    <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="Leave blank if you don't want change password"
+                           minlength="8" maxlength="20"
+                    oninput="checkPasswordMatch(document.getElementById('confirmPassword'))">
                 </div>
             </div>
+
             <div class="form-group row mb-3">
-                <label class="col-sm-4 col-form-label">Roles</label>
+                <label class="col-sm-4 col-form-label">Confirm Password</label>
                 <div class="col-sm-8">
-                    <th:block th:each="role: ${listRoles}">
-                        <div class="form-check">
-                            <input type="checkbox" class="form-check-input" th:field="*{roles}" th:value="${role.id}"/>
-                            <label class="form-check-label" th:for="${'role' + role.id}" th:text="${role.name}"></label>
-                            - <small th:text="${role.description}"></small>
-                        </div>
-                    </th:block>
+                    <input type="password" class="form-control" id="confirmPassword" minlength="8" maxlength="20"
+                    oninput="checkPasswordMatch(this)">
+                </div>
+            </div>
+
+            <div class="form-group row mb-3">
+                <label class="col-sm-4 col-form-label">Assign Roles</label>
+                <div class="col-sm-8">
+                    <span><b>[[${user.roles}]]</b></span>
                 </div>
             </div>
             <div class="form-group row">
@@ -125,7 +130,6 @@
 <script type="text/javascript">
    $(document).ready(function () {
        $('#buttonCancelCreateUser').on('click', function () {
-           console.log(123)
            window.location = "[[@{/shopme/admin/users}]]";
        })
 
@@ -180,6 +184,14 @@
        });
 
        return false;
+   }
+
+   function checkPasswordMatch(confirmPassword) {
+       if (confirmPassword.value != $('#password').val()) {
+           confirmPassword.setCustomValidity("Password do not match!")
+       } else {
+           confirmPassword.setCustomValidity("")
+       }
    }
 
 
