--- a/src/main/resources/templates/admin/user/users.html
+++ b/src/main/resources/templates/admin/user/users.html
@@ -3,7 +3,11 @@
 <head th:replace="~{admin/fragments :: page_head}"></head>
 <body>
 
-<div th:replace="~{admin/navigation :: menu}"></div>
+<div class="container-fluid">
+    <div th:replace="~{admin/navigation :: lougout_form}"></div>
+
+    <nav th:replace="~{admin/navigation :: menu}"></nav>
+</div>
 
 <div>
     <div>
@@ -166,5 +170,5 @@
         window.location = "[[@{/shopme/admin/users}]]";
     }
 </script>
-<!--<script th:src="@{/js/common.js}"></script>-->
+<script th:src="@{/js/logout.js}"></script>
 </html>
