--- a/src/main/resources/templates/admin/navigation.html
+++ b/src/main/resources/templates/admin/navigation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+<html lang="en" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -12,7 +13,6 @@
 </div>
 
 
-
 <nav th:fragment="menu" class="navbar navbar-expand-lg bg-dark navbar-dark">
     <a href="" class="navbar-brand" th:href="@{/shopme/admin/home}">
         <img th:src="@{/images/ShopmeAdminSmall.png}" alt="Image error">
@@ -23,37 +23,56 @@
     <div class="collapse navbar-collapse" id="topNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a th:href="@{/shopme/admin/users}" class="nav-link">Users</a>
+                <a sec:authorize="hasAuthority('Admin')" th:href="@{/shopme/admin/users}" class="nav-link">Users</a>
             </li>
+            <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/categories}" class="nav-link">Categories</a>
+                </li>
+            </th:block>
+            <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/brands}" class="nav-link">Brands</a>
+                </li>
+            </th:block>
+            <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor', 'Salesperson', 'Shipper')">
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/products}" class="nav-link">Product</a>
+                </li>
+            </th:block>
+            <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson')">
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/customers}" class="nav-link">Customers</a>
+                </li>
+            </th:block>
+            <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson')">
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/shipping}" class="nav-link">Shipping</a>
+                </li>
+            </th:block>
+            <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson', 'Shipper')">
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/orders}" class="nav-link">Orders</a>
+                </li>
+            </th:block>
+            <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson')">
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/reports}" class="nav-link">Reports</a>
+                </li>
+            </th:block>
+            <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/articles}" class="nav-link">Articles</a>
+                </li>
+            </th:block>
+            <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/menus}" class="nav-link">Menus</a>
+                </li>
+            </th:block>
             <li class="nav-item">
-                <a th:href="@{/shopme/admin/categories}" class="nav-link">Categories</a>
-            </li>
-            <li class="nav-item">
-                <a th:href="@{/shopme/admin/brands}" class="nav-link">Brands</a>
-            </li>
-            <li class="nav-item">
-                <a th:href="@{/shopme/admin/products}" class="nav-link">Product</a>
-            </li>
-            <li class="nav-item">
-                <a th:href="@{/shopme/admin/customers}" class="nav-link">Customers</a>
-            </li>
-            <li class="nav-item">
-                <a th:href="@{/shopme/admin/shipping}" class="nav-link">Shipping</a>
-            </li>
-            <li class="nav-item">
-                <a th:href="@{/shopme/admin/orders}" class="nav-link">Orders</a>
-            </li>
-            <li class="nav-item">
-                <a th:href="@{/shopme/admin/reports}" class="nav-link">Reports</a>
-            </li>
-            <li class="nav-item">
-                <a th:href="@{/shopme/admin/articles}" class="nav-link">Articles</a>
-            </li>
-            <li class="nav-item">
-                <a th:href="@{/shopme/admin/menus}" class="nav-link">Menus</a>
-            </li>
-            <li class="nav-item">
-                <a th:href="@{/shopme/admin/settings}" class="nav-link">Settings</a>
+                <a sec:authorize="hasAuthority('Admin')" th:href="@{/shopme/admin/settings}"
+                   class="nav-link">Settings</a>
             </li>
             <li>
                 <span class="fas fa-user fa-2x icon-silver"></span>
