--- a/src/main/resources/templates/admin/user/login.html
+++ b/src/main/resources/templates/admin/user/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
 
     <title>Login - Home page</title>
-
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -21,16 +21,16 @@
             </div>
 
             <div class="text-center" th:if="${param.logout}">
-                <p class="text-warning">You have been logout.</p>
+                <p class="text-warning" id="message-logout">You have been logout.</p>
             </div>
-            <p>Access to Shopme Control Panel</p>
+            <p class="text-center">Access to Shopme Control Panel</p>
             <p>
                 <input type="email" name="email" class="form-control" placeholder="E-mail" required/>
             </p>
             <p>
                 <input type="password" name="password" class="form-control" placeholder="Password" required/>
             </p>
-            <p>
+            <p class="text-center">
                 <input type="submit" value="Login" class="btn btn-primary"/>
             </p>
         </form>
@@ -41,4 +41,11 @@
     <p>Shopme Control Panel - Copyright &copy; Shopme</p>
 </div>
 </body>
+<script type="text/javascript">
+    $(document).ready(function () {
+            setTimeout(function () {
+                $('#message-logout').fadeOut();
+            }, 3000);
+    });
+</script>
 </html>
